--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^1.3.7",
     "@types/node": "^18",
     "nuxt": "^3.4.3"
   }
